# mit-6035-compiler-rs

./: .gitignore  Cargo.toml  README.md
src/: ast.rs  decaf.lalrpop  lib.rs  main.rs
src/parser/: mod.rs
src/parser/testcases/illegal/: illegal-01  illegal-03  illegal-04  illegal-05  illegal-06  illegal-07  illegal-08  illegal-09  illegal-10  illegal-11  illegal-12  illegal-13  illegal-14  illegal-15  illegal-16  illegal-17  illegal-18  illegal-19  illegal-20
src/parser/testcases/legal/: legal-01  legal-04  legal-05  legal-06  legal-07  legal-08  legal-09  legal-10  legal-12  legal-13  legal-14  legal-15  legal-16  legal-17  legal-18
src/semantic_analyzer/: analyzer.rs  env.rs  errors.rs  ir.rs  mod.rs  pre_check.rs
src/semantic_analyzer/testcases/: illegal-01.dcf  illegal-02.dcf  illegal-03.dcf  illegal-04.dcf  illegal-05.dcf  illegal-06.dcf  illegal-07.dcf  illegal-08.dcf  illegal-09.dcf  illegal-10.dcf  illegal-11.dcf  illegal-12.dcf  illegal-13.dcf  illegal-14.dcf  illegal-15.dcf  illegal-16.dcf  illegal-17.dcf  legal-01.dcf
