[package]
name = "decafc"
version = "0.1.0"
edition = "2021"
authors = ["Jingping Yin <yinjingping2022@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1.5.6"
